[add] maxi struttura - import vari

--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -15,6 +15,17 @@
     <title>Boolzapp</title>
 </head>
 <body>
+
+    <div id="app" class="main-wrapper">
+        <div class="main-container">
+            <div class="col-left debug">
+
+            </div>
+            <div class="col-right">
+
+            </div>
+        </div>
+    </div>
     
 
     <script src="assets/js/app.js"></script>
