--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -67,7 +67,7 @@
 
                 <div class="main-container-message">
 
-                    <div class="container-message debug">
+                    <div class="container-message">
 
                         <img src="assets/img/avatar_1.jpg" alt="">
 
@@ -85,9 +85,59 @@
 
             <div class="col-right">
 
-                <div class="header-right"></div>
-                <div class="message-area"></div>
-                <div class="footer-right"></div>
+                <div class="header-right">
+
+                    <div class="avatar-name-status">
+
+                        <img src="assets/img/avatar_1.jpg" alt="">
+                        <div class="name-status">
+                            <span class="name-user">Michele</span>
+                            <span class="status">Ultimo accesso oggi alle 12:00</span>
+                        </div>
+                    </div>
+
+                    <div class="header-icons">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+
+                        <i class="fa-solid fa-paperclip"></i>
+
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </div>
+
+                <div class="message-area">
+
+                    <div class="message recived">
+                        <p>Testo molto molto lungo</p>
+                        <span>12:00</span>
+                    </div>
+                    <div class="message send">
+                        <p>Testo molto molto lungo</p>
+                        <span>12:00</span>
+                    </div>
+                    <div class="message recived">
+                        <p>Testo molto molto lungo</p>
+                        <span>12:00</span>
+                    </div>
+                    <div class="message send">
+                        <p>Testo molto molto lungo</p>
+                        <span>12:00</span>
+                    </div>
+                    <div class="message recived">
+                        <p>Testo molto molto lungo</p>
+                        <span>12:00</span>
+                    </div>
+
+                </div>
+
+                <div class="footer-right">
+
+                    <i class="fa-regular fa-face-smile"></i>
+
+                    <input type="text" placeholder="Scrivi un messaggio">
+
+                    <i class="fa-solid fa-microphone"></i>
+                </div>
 
             </div>
         </div>
