[add] generate v-for + img + alt

--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -67,13 +67,15 @@
 
                 <div class="main-container-message">
 
-                    <div class="container-message">
+                    <div
+                        v-for="(contact, name) in contacts"
+                        class="container-message">
 
-                        <img src="assets/img/avatar_1.jpg" alt="">
+                        <img :src="'assets/img/avatar'+contact.avatar+'.jpg'" :alt="'avatar di '+ contact.name">
 
                         <div class="info-message">
 
-                            <span class="name-user-message">Michele</span>
+                            <span class="name-user-message">{{contact.name}}</span>
 
                             <span class="last-send-message">Ultimo messaggio inviato</span>
                         </div>
@@ -107,23 +109,8 @@
 
                 <div class="message-area">
 
-                    <div class="message recived">
-                        <p>Testo molto molto lungo</p>
-                        <span>12:00</span>
-                    </div>
-                    <div class="message send">
-                        <p>Testo molto molto lungo</p>
-                        <span>12:00</span>
-                    </div>
-                    <div class="message recived">
-                        <p>Testo molto molto lungo</p>
-                        <span>12:00</span>
-                    </div>
-                    <div class="message send">
-                        <p>Testo molto molto lungo</p>
-                        <span>12:00</span>
-                    </div>
-                    <div class="message recived">
+                    <div
+                        class="message">
                         <p>Testo molto molto lungo</p>
                         <span>12:00</span>
                     </div>
