--- a/milestone_3/index.html
+++ b/milestone_3/index.html
@@ -121,7 +121,7 @@
                     <!-- Formulina (ricerca google: https://michaelnthiessen.com/conditional-class-binding-vue ) con ternario per assegnare le due classi -->
                     <div
                         v-for="singleMsg in contacts[activeIndex].messages"
-                        :class="singleMsg.status === 'send' ? 'send' : 'recived'"
+                        :class="singleMsg.status === 'sent' ? 'sent' : 'received'"
                         class="message">
                         <p>{{singleMsg.message}}</p>
                         <span>{{singleMsg.date.substr(11, 5)}}</span>
