--- a/milestone_4/index.html
+++ b/milestone_4/index.html
@@ -62,10 +62,9 @@
 
                         <input 
                             type="text"
-                            placeholder="Cerca o inizia una nuova chat">
-                            <!-- @keyup="contacts.name" -->
-                            <!-- v-model="contacts.name"> -->
-
+                            placeholder="Cerca o inizia una nuova chat"
+                            v-model="search"
+                            @keyup="filteredContacts()">
                     </div>
                 </div>
 
